Loading button component complete.

--- a/src/assets/configs.json
+++ b/src/assets/configs.json
@@ -5,5 +5,15 @@
   },
   "general": {
     "appName": "LedgerKeep"
+  },
+  "theme": {
+    "dpa": {
+      "primary": "#673ab7"
+    }
+  },
+  "validation": {
+    "regex": {
+      "password": "^\\S+$"
+    }
   }
 }
