--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e",
-    "pretty": "prettier --write ."
+    "lint": "prettier --write . && ng lint",
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
