--- a/src/assets/configs.json
+++ b/src/assets/configs.json
@@ -19,6 +19,7 @@
   },
   "authkeep": {
     "address": "http://localhost:7100/api",
-    "getToken": "/generalAccess/token"
+    "getToken": "/generalAccess/token",
+    "initPasswordReset": "/generalAccess/user/_initPasswordReset"
   }
 }
