--- a/src/assets/configs.json
+++ b/src/assets/configs.json
@@ -22,6 +22,7 @@
     "address": "http://localhost:7100/api",
     "getToken": "/generalAccess/token",
     "initPasswordReset": "/generalAccess/user/_initPasswordReset",
-    "finishPasswordReset": "/generalAccess/user/password"
+    "finishPasswordReset": "/generalAccess/user/password",
+    "initSignup": "/generalAccess/user/_initSignup"
   }
 }
