Signup process complete.

--- a/src/assets/configs.json
+++ b/src/assets/configs.json
@@ -23,6 +23,7 @@
     "getToken": "/generalAccess/token",
     "initPasswordReset": "/generalAccess/user/_initPasswordReset",
     "finishPasswordReset": "/generalAccess/user/password",
-    "initSignup": "/generalAccess/user/_initSignup"
+    "initSignup": "/generalAccess/user/_initSignup",
+    "finishSignup": "/generalAccess/user"
   }
 }
