Profile page complete.

--- a/src/assets/configs.json
+++ b/src/assets/configs.json
@@ -34,6 +34,8 @@
   },
   "ledgerkeep": {
     "address": "http://localhost:8100/api",
-    "getSum": "/userAccess/transaction/sum"
+    "getSum": "/userAccess/transaction/sum",
+    "getTxCount": "/userAccess/transaction/count",
+    "getCatCount": "/userAccess/category/count"
   }
 }
