Added formGroup in create category dialog.

--- a/src/assets/configs.json
+++ b/src/assets/configs.json
@@ -12,7 +12,8 @@
   "validation": {
     "passwordRegex": "^\\S+$",
     "emailRegex": "^[a-z0-9._%+-]+@[a-z0-9.-]+\\.[a-z]{2,4}$",
-    "nameRegex": "^[a-zA-Z0-9]+$"
+    "nameRegex": "^[a-zA-Z0-9]+$",
+    "categoryRegex": "^[a-zA-Z0-9-_]+$"
   },
   "ui": {
     "snackbarDuration": 2000
