Delete Category added.

--- a/src/assets/configs.json
+++ b/src/assets/configs.json
@@ -39,6 +39,7 @@
     "getSum": "/userAccess/transaction/sum",
     "getTxCount": "/userAccess/transaction/count",
     "getCatCount": "/userAccess/category/count",
-    "putCategory": "/userAccess/category"
+    "putCategory": "/userAccess/category",
+    "deleteCategory": "/userAccess/category"
   }
 }
