Transaction filter sheet linked with My transactions page.

--- a/src/assets/configs.json
+++ b/src/assets/configs.json
@@ -36,6 +36,7 @@
   "ledgerkeep": {
     "address": "http://localhost:8100/api",
     "getCategories": "/userAccess/category",
+    "getTransactions": "/userAccess/transaction",
     "getSum": "/userAccess/transaction/sum",
     "getTxCount": "/userAccess/transaction/count",
     "getCatCount": "/userAccess/category/count",
