Add transaction page complete.

--- a/src/assets/configs.json
+++ b/src/assets/configs.json
@@ -44,6 +44,7 @@
     "putCategory": "/userAccess/category",
     "deleteCategory": "/userAccess/category",
     "updateTransaction": "/userAccess/transaction",
-    "deleteTransaction": "/userAccess/transaction"
+    "deleteTransaction": "/userAccess/transaction",
+    "putTransaction": "/userAccess/transaction"
   }
 }
