Login form validations added.

--- a/src/assets/config/app-config.json
+++ b/src/assets/config/app-config.json
@@ -1,5 +1,9 @@
 {
   "auth": {
     "tokenKey": "LK_TOKEN"
+  },
+  "validation": {
+    "emailRegex": "^[a-z0-9._%+-]+@[a-z0-9.-]+\\.[a-z]{2,4}$",
+    "passwordRegex": "^\\S+$"
   }
 }
