Signup validations complete.

--- a/src/assets/config/app-config.json
+++ b/src/assets/config/app-config.json
@@ -6,6 +6,7 @@
     "tokenKey": "LK_TOKEN"
   },
   "validation": {
+    "nameRegex": "^[a-zA-Z0-9]+$",
     "emailRegex": "^[a-z0-9._%+-]+@[a-z0-9.-]+\\.[a-z]{2,4}$",
     "passwordRegex": "^\\S+$",
     "passwordMinLength": 8
