Working on Profile page. Setting up top image.

--- a/src/assets/config/app-config.json
+++ b/src/assets/config/app-config.json
@@ -1,6 +1,7 @@
 {
   "api": {
-    "authkeep": "http://34.92.99.92:5100"
+    "authkeep": "http://34.92.99.92:5100",
+    "imagekeep": "http://34.92.99.92:4100"
   },
   "auth": {
     "tokenKey": "LK_TOKEN"
