--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "lk-fe": {
+    "ledgerkeep-fe": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -42,7 +42,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/lk-fe",
+            "outputPath": "dist/ledgerkeep-fe",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -89,18 +89,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "lk-fe:build"
+            "browserTarget": "ledgerkeep-fe:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "lk-fe:build:production"
+              "browserTarget": "ledgerkeep-fe:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "lk-fe:build"
+            "browserTarget": "ledgerkeep-fe:build"
           }
         },
         "test": {
@@ -129,18 +129,18 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "lk-fe:serve"
+            "devServerTarget": "ledgerkeep-fe:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "lk-fe:serve:production"
+              "devServerTarget": "ledgerkeep-fe:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "lk-fe",
+  "defaultProject": "ledgerkeep-fe",
   "cli": {
     "analytics": false
   }
