--- a/angular.json
+++ b/angular.json
@@ -6,7 +6,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "geometric": {
+    "ledgerkeep-fe": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -45,14 +45,17 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/geometric",
+            "outputPath": "dist/ledgerkeep-fe",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.json",
             "inlineStyleLanguage": "sass",
             "assets": ["src/assets"],
-            "styles": ["./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css", "src/styles.sass"],
+            "stylePreprocessorOptions": {
+              "includePaths": ["src/app/styles"]
+            },
+            "styles": ["./node_modules/@angular/material/prebuilt-themes/indigo-pink.css", "src/styles.sass"],
             "scripts": []
           },
           "configurations": {
@@ -92,10 +95,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "geometric:build:production"
+              "browserTarget": "ledgerkeep-fe:build:production"
             },
             "development": {
-              "browserTarget": "geometric:build:development"
+              "browserTarget": "ledgerkeep-fe:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -103,11 +106,11 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "geometric:build"
+            "browserTarget": "ledgerkeep-fe:build"
           }
         }
       }
     }
   },
-  "defaultProject": "geometric"
+  "defaultProject": "ledgerkeep-fe"
 }
